grid menu drinks

--- a/styles/output.css
+++ b/styles/output.css
@@ -176,6 +176,9 @@
   .mx-auto {
     margin-inline: auto;
   }
+  .my-2 {
+    margin-block: calc(var(--spacing) * 2);
+  }
   .mt-3 {
     margin-top: calc(var(--spacing) * 3);
   }
@@ -307,6 +310,10 @@
     font-size: var(--text-2xl);
     line-height: var(--tw-leading, var(--text-2xl--line-height));
   }
+  .text-3xl {
+    font-size: var(--text-3xl);
+    line-height: var(--tw-leading, var(--text-3xl--line-height));
+  }
   .text-4xl {
     font-size: var(--text-4xl);
     line-height: var(--tw-leading, var(--text-4xl--line-height));
@@ -359,10 +366,34 @@
       }
     }
   }
+  .hover\:scale-1100 {
+    &:hover {
+      @media (hover: hover) {
+        --tw-scale-x: 1100%;
+        --tw-scale-y: 1100%;
+        --tw-scale-z: 1100%;
+        scale: var(--tw-scale-x) var(--tw-scale-y);
+      }
+    }
+  }
   .hover\:-rotate-2 {
     &:hover {
       @media (hover: hover) {
         rotate: calc(2deg * -1);
+      }
+    }
+  }
+  .hover\:-rotate-20 {
+    &:hover {
+      @media (hover: hover) {
+        rotate: calc(20deg * -1);
+      }
+    }
+  }
+  .hover\:-rotate-180 {
+    &:hover {
+      @media (hover: hover) {
+        rotate: calc(180deg * -1);
       }
     }
   }
